--- a/AgendaContatos/app/src/main/res/values/strings.xml
+++ b/AgendaContatos/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AgendaContatos</string>
+    <string name="app_name">Agenda de Contatos</string>
 </resources>
